manifests/apps/metro-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metro-app
  namespace: metro-app
  annotations:
    secret.reloader.stakater.com/reload: secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metro-app
  template:
    metadata:
      labels:
        app: metro-app
    spec:
      containers:
        - name: metro-app
          image: ghcr.io/kubeside/images/metro@sha256:6c9ec26ced1760887b5294743e1f106654e2b2e4346bd1ef0904b242f49f6955
          ports:
            - containerPort: 80
