manifests/apps/metro-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metro-app
  namespace: metro-app
spec:
  selector:
    app: metro-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
