manifests/apps/metro-app/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: network-policy
  namespace: metro-app
spec:
  endpointSelector:
    matchLabels:
      app: metro-app
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-system
  egress:
    - toFQDNs:
        - matchName: "ditto.imavgs.no"
        - matchName: "dns.google"
        - matchName: "one.one.one.one"
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 1.1.1.1/32
        - cidr: 8.8.8.8/32
      toPorts:
        - ports:
            - port: "443"
